<resources>
    <string name="app_name">Basic Frases</string>
    <string name="do_you_speak_english">Do you Speak english?</string>
    <string name="good_evening">Good Evening</string>
    <string name="hello">Hello</string>
    <string name="how_are_you">How are you</string>
    <string name="i_live_in">I live in ...</string>
    <string name="my_name_is">My Name is</string>
    <string name="please">please</string>
    <string name="welcome">Welcome</string>
</resources>